--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -22,6 +22,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,500"
+      rel="stylesheet"
+    />
     <title>Earworm Report</title>
   </head>
   <body>
